--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,36 @@ section {
     letter-spacing: 1px;
     margin: 0;
 }
+
+@media (max-width: 375px) { /* width for iPhone and Android */
+    .header-container {
+        flex-direction: column; /* Лого та текст стають один під одним */
+        text-align: center;
+    }
+
+    #brand {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    nav ul {
+        flex-direction: column; /* Меню стає вертикальним */
+        align-items: center;
+        gap: 10px;
+    }
+
+    .advantage_container {
+        flex-direction: column; /* Картки переваг стають у стовпчик */
+    }
+
+    .advantage_block {
+        flex-direction: column; /* Картинка над текстом усередині картки */
+        width: 100%;
+        text-align: center;
+    }
+
+    .advantage_text {
+        margin-right: 0;
+        margin-top: 10px;
+    }
+}
