--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,125 @@ section {
     margin: 0;
 }
 
+@media screen and (min-width: 490px) and (max-width: 1200px) {
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .header-container {
+        align-items: center;
+        width: 100%;
+        gap: 10px;
+        padding-left: 40px;
+    }
+
+    .menu-toggle {
+        display: block; /* Показуємо тільки на мобільних */
+        cursor: pointer;
+        padding-right: 40px;
+
+    }
+
+    .bar {
+        display: block;
+        width: 30px;
+        height: 5px;
+        margin: 7px auto;
+        background-color: #34495e;
+        transition: 0.3s ease;
+    }
+
+    /* hide munu by default */
+    .navig-list {
+        display: none; 
+        flex-direction: column; /* vertical */
+        width: 100%;
+        position: absolute; /* menu over content */
+        top: 100%; /* close under header */
+        left: 0;
+        background-color: #f8f9fa;
+        border-bottom: 2px solid #37f347;
+    }
+
+    /* class for js for click */
+    .navig-list.active {
+        display: flex;
+        font-size:20px;
+        display: block;
+        text-align: center;
+    }
+
+    .navig-list.active li a:active {
+        color: #104901; 
+        background-color: #e0f7e4;
+    }
+
+    nav ul li {
+        width: 90%;
+        text-align: center;
+        padding: 5px 0;
+        border-top: 1px solid #dee2e6;
+    }
+
+    #logo {
+        width: 60px;
+        height: auto;
+        border-radius: 10%;
+    }
+
+    #brand {
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+    }
+
+    #brand h1 {
+        font-size: 20px !important; 
+    }
+
+    .advantage_container {
+        display: flex;
+        flex-direction: column; /* vertical view */
+        gap: 20px;
+        height: auto;
+        padding: 15px;
+        flex-wrap: wrap;
+    }
+
+    .advantage_block {
+        flex-direction: row;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+
+    .advantage_block img {
+        width: 80px;
+        height: auto;
+        margin-right: 15px;
+    }
+
+    .advantage_text {
+        margin: 0;
+        text-align: left;
+        height: auto;
+        width: 100%;
+    }
+
+    .advantage_text h2,
+    .advantage_text p {
+        text-align: left;
+    }
+
+}
+
 /*Web breakpoints: Desktop Large: 1500, Desktop Small: 1024, Tablet Large: 768, */
 /*Tablet Small: 480, Mobile Large: 375, Mobile Small: 320*/
-@media (max-width: 480px) {
+@media screen and  (max-width: 480px) {
+    
     .header-container {
         flex-direction: column; /* logo and text  vertical */
         text-align: center;
@@ -297,119 +413,3 @@ section {
 
 }
 
-@media (max-width: 1200px) {
-    header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .header-container {
-        flex-direction: row; /* logo and text  horisontal */
-        justify-content: space-between; /* logo left, menu - right */
-        align-items: center;
-        width: 100%;
-        gap: 10px;
-        padding-left: 40px;
-    }
-
-    .menu-toggle {
-        display: block; /* Показуємо тільки на мобільних */
-        cursor: pointer;
-        padding-right: 40px;
-
-    }
-
-    .bar {
-        display: block;
-        width: 50px;
-        height: 5px;
-        margin: 10px auto;
-        background-color: #34495e;
-        transition: 0.3s ease;
-    }
-
-    /* hide munu by default */
-    .navig-list {
-        display: none; 
-        flex-direction: column; /* vertical */
-        width: 100%;
-        position: absolute; /* menu over content */
-        top: 100%; /* close under header */
-        left: 0;
-        background-color: #f8f9fa;
-        border-bottom: 2px solid #37f347;
-    }
-
-    /* class for js for click */
-    .navig-list.active {
-        display: flex;
-        font-size:20px;
-        display: block;
-        text-align: center;
-    }
-
-    .nav-list.active li a:active {
-        color: #104901; 
-        background-color: #e0f7e4;
-    }
-
-    nav ul li {
-        width: 90%;
-        text-align: center;
-        padding: 5px 0;
-        border-top: 1px solid #dee2e6;
-    }
-
-    #logo {
-        width: 60px;
-        height: auto;
-        border-radius: 10%;
-    }
-
-    #brand {
-        flex-direction: row;
-        gap: 10px;
-        align-items: center;
-    }
-
-    #brand h1 {
-        font-size: 20px !important; 
-    }
-
-    .advantage_container {
-        display: flex;
-        flex-direction: column; /* vertical view */
-        gap: 20px;
-        height: auto;
-        padding: 15px;
-        flex-wrap: wrap;
-    }
-
-    .advantage_block {
-        flex-direction: row;
-        align-items: center;
-        height: auto;
-        width: 100%;
-        padding: 15px;
-        box-sizing: border-box;
-    }
-
-    .advantage_block img {
-        width: 80px;
-        height: auto;
-        margin-right: 15px;
-    }
-
-    .advantage_text {
-        margin: 0;
-        text-align: left;
-        height: auto;
-        width: 100%;
-    }
-
-    .advantage_text h2,
-    .advantage_text p {
-        text-align: left;
-    }
-
-}
